<resources>
    <string name="app_name">Foundy</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_myposts">My Posts</string>
    <string name="menu_details">My Details</string>
    <string name="api_key">AIzaSyBRNh4ht4hq9vjS5fuezo-5l8jEKx82ARo</string>

    <!--login and registers strings-->
    <string name="hintEdit">Enter your password for changing your details</string>
    <string name="login">Login</string>
    <string name="My_profile">My Profile</string>
    <string name="logout">Logout</string>
    <string name="editPic">Edit picture</string>
    <string name="editName">Edit name</string>
    <string name="editProf">Edit User</string>
    <string name="changePass">Change password</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="editMyPro">Edit my profile</string>
    <string name="tag"> Find your lost stuff in our app </string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="pick_place">Choose a place</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- home fragment strings -->
    <string name="post_category_tv">Category:</string>
    <string name="post_date_tv">Date:</string>
    <string name="post_location_tv">Location:</string>
    <string name="post_description_tv">Description:</string>
    <string name="post_username_textview">username:</string>
    <string name="dialog_congratulations_title">Congratulations</string>
    <string name="dialog_congratulations_summary">The post uploaded successfully</string>

</resources>