<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.foundyapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.foundyapp.ui.gallery.GalleryFragment"
        android:label="@string/menu_myposts"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.foundyapp.ui.MyDetails.MyDetailsFragment"
        android:label="@string/menu_details"
        tools:layout="@layout/fragment_mydetails" />
    <fragment
        android:id="@+id/advancedSearchFragment"
        android:name="com.example.foundyapp.AdvancedSearchFragment"
        android:label="Advanced search"
        tools:layout="@layout/fragment_advanced_search" />
    <fragment
        android:id="@+id/searchByPlaceFragment"
        android:name="com.example.foundyapp.SearchByPlaceFragment"
        android:label="Search by place"
        tools:layout="@layout/fragment_search_by_place" />
</navigation>